[package]
name = "robotmk"
version = "4.0.0-alpha-1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
base64 = "0.22.1"
camino = { version = "1.1.9", features = ["serde1"] }
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
flate2 = "1.0.35"
flexi_logger = "0.29.7"
fs4 = "0.12.0"
libc = "0.2.168"
log = "0.4.22"
nix = { version = "0.29.0", features = ["signal"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sysinfo = "0.33.0"
tar = "0.4.43"
tempfile = "3.14.0"
thiserror = "2.0.7"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
walkdir = "2.5.0"
winsafe = { version = "0.0.22", features = [ "ole" ] }
[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Com",
    "Win32_System_TaskScheduler",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_System_Variant",
]

[dev-dependencies]
assert_cmd = "2.0.16"

[[bin]]
name = "robotmk_agent_plugin"
path = "src/bin/agent_plugin.rs"

[[bin]]
name = "robotmk_scheduler"
path = "src/bin/scheduler/main.rs"
