[package]
name = "robotmk"
version = "4.0.0-alpha-2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
base64 = "0.22.1"
camino = { version = "1.1.9", features = ["serde1"] }
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
flate2 = "1.1.1"
flexi_logger = "0.30.1"
fs4 = "0.13.1"
libc = "0.2.172"
log = "0.4.27"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.1"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
walkdir = "2.5.0"
winsafe = { version = "0.0.23", features = [ "ole" ] }
[dependencies.windows]
version = "0.60.0"  # winsafe cannot handle 0.61.0 at the moment, so we have to stay on 0.60.0 for now
features = [
    "Win32_System_Com",
    "Win32_System_TaskScheduler",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_System_Variant",
]

[dev-dependencies]
assert_cmd = "2.0.17"

[[bin]]
name = "robotmk_agent_plugin"
path = "src/bin/agent_plugin.rs"

[[bin]]
name = "robotmk_scheduler"
path = "src/bin/scheduler/main.rs"
