[package]
name = "robotmk"
version = "5.0.0-alpha-1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
base64 = "0.22.1"
camino = { version = "1.2.2", features = ["serde1"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
flate2 = "1.1.9"
flexi_logger = "0.31.8"
fs4 = "1.1.0"
libc = "0.2.186"
log = "0.4.29"
nix = { version = "0.31.3", features = ["signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = "0.39.1"
tar = "0.4.45"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6.1"
winsafe = { version = "0.0.27", features = [ "ole" ] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_TaskScheduler",
    "Win32_System_Variant",
]

[dev-dependencies]
assert_cmd = "2.2.2"

[[bin]]
name = "robotmk_agent_plugin"
path = "src/bin/agent_plugin.rs"

[[bin]]
name = "robotmk_scheduler"
path = "src/bin/scheduler/main.rs"
