[tool.poetry]
name = "robotmk"
version = "2.0.0-alpha"
packages = [{include = "robotmk", from = "v2"}]
description = "Synthetic monitoring with Checkmk"
authors = ["Team Yukon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "*"
apscheduler = "<4"
robotframework = "^6.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
isort = "*"
pylint = "*"
pytest = "*"
# Editor dependencies
python-lsp-server = "*"
pylsp-mypy = "*"
pyls-isort = "*"
python-lsp-black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-docstring"

[tool.isort]
profile = "black"
