[package]
name = "robotmk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
async-std = "*"
base64 = "*"
camino = { version = "1.1.6", features = ["serde1"] }
chrono = "0.4.31"
clap = { version = "*", features = ["derive"] }
clokwerk = "*"
ctrlc = "*"
flexi_logger = "*"
futures = "*"
log = "*"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "*"
sysinfo = "*"
tempfile = "3.8.0"
walkdir = "2.4.0"

[[bin]]
name = "robotmk_agent"
path = "src/bin/agent.rs"

[[bin]]
name = "robotmk"
path = "src/bin/scheduler/main.rs"
