[package]
name = "robotmk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
async-std = "*"
atomicwrites = "*"
chrono = "0.4.31"
clap = { version = "*", features = ["derive"] }
clokwerk = "*"
ctrlc = "*"
flexi_logger = "*"
futures = "*"
log = "*"
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "*"
sysinfo = "*"
